[gd_scene load_steps=3 format=3 uid="uid://dig2t3tg5mcku"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_pc2lt"]
[ext_resource type="FontFile" uid="uid://btp5ny0vcgf34" path="res://fonts/alagard.ttf" id="1_y43xp"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_pc2lt")

[node name="MainMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Play" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "PLAY"
flat = true

[node name="Options" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "OPTIONS"
flat = true

[node name="Quit" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "QUIT"
flat = true

[node name="Label" type="Label" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 70
text = "NOMAD'S FANG"
horizontal_alignment = 1

[node name="PauseOptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseOptionsMenu"]
layout_mode = 2
offset_left = -49.0
offset_right = 1201.0
offset_bottom = 688.0
color = Color(0, 0, 0, 0.317647)

[node name="MarginContainer" type="MarginContainer" parent="PauseOptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOptionsMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="PauseOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "SFX VOLUME
"

[node name="VolumeSlider" type="HSlider" parent="PauseOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PauseOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label2" type="Label" parent="PauseOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "MUSIC VOLUME
"

[node name="VolumeSlider2" type="HSlider" parent="PauseOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PauseOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Back" type="Button" parent="PauseOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "BACK"
flat = true

[node name="Label" type="Label" parent="PauseOptionsMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"
horizontal_alignment = 1

[node name="StartOptionsMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="StartOptionsMenu"]
layout_mode = 2
offset_left = -49.0
offset_right = 1201.0
offset_bottom = 688.0
color = Color(0, 0, 0, 0.317647)

[node name="MarginContainer" type="MarginContainer" parent="StartOptionsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="StartOptionsMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="StartOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "SFX VOLUME
"

[node name="VolumeSlider" type="HSlider" parent="StartOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="StartOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Label2" type="Label" parent="StartOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "MUSIC VOLUME
"

[node name="VolumeSlider2" type="HSlider" parent="StartOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="StartOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Back" type="Button" parent="StartOptionsMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "BACK"
flat = true

[node name="Label" type="Label" parent="StartOptionsMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 50
text = "OPTIONS"
horizontal_alignment = 1

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 0
offset_left = -80.0
offset_top = -59.0
offset_right = 1260.0
offset_bottom = 731.0
color = Color(0, 0, 0, 0.317647)

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 40

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="Resume" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "RESUME"
flat = true

[node name="Options" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "OPTIONS"
flat = true

[node name="Quit" type="Button" parent="PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 40
text = "QUIT"
flat = true

[node name="Label" type="Label" parent="PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_y43xp")
theme_override_font_sizes/font_size = 60
text = "PAUSED"

[node name="DeathMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OutroMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PauseOptionsMenu/MarginContainer/VBoxContainer/Back" to="." method="_ready"]
[connection signal="pressed" from="StartOptionsMenu/MarginContainer/VBoxContainer/Back" to="." method="_ready"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="PauseMenu/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
